add docker submodule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,15 +35,19 @@
     "astype",
     "cnae",
     "dagrun",
+    "dataframe",
     "geoimediata",
     "geointerm",
     "geointermd",
     "geopandas",
+    "gitops",
     "globals",
     "ibge",
     "iterrows",
     "mundv",
     "pymongo",
+    "sisu",
+    "SISU",
     "skiprows",
     "ufpb",
     "venv",
