--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,9 +33,13 @@
   "workbench.editor.scrollToSwitchTabs": true,
   "cSpell.words": [
     "astype",
+    "autopep",
+    "CERTDIR",
     "cnae",
+    "conntable",
     "dagrun",
     "dataframe",
+    "dind",
     "geoimediata",
     "geointerm",
     "geointermd",
@@ -44,11 +48,14 @@
     "globals",
     "ibge",
     "iterrows",
+    "localtime",
     "mundv",
+    "pylint",
     "pymongo",
     "sisu",
     "SISU",
     "skiprows",
+    "strftime",
     "ufpb",
     "venv",
     "Webserver",
