--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "src/docker"]
-	path = src/docker
+[submodule "docker"]
+	path = docker
 	url = git@gitlab.com:lema-ufpb-hub/docker.git
 	branch = main
