--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,9 +3,11 @@
   "configurations": [
     {
       "name": "Tasks",
+       "preLaunchTask": "PyEnv",
       "request": "launch",
       "type": "debugpy",
-      "program": "./.vscode/tasks.py"
+      "program": "./.vscode/tasks.py",
+      "console": "integratedTerminal"
     }
   ]
 }
