--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,11 +3,10 @@
   "configurations": [
     {
       "name": "Tasks",
-       "preLaunchTask": "PyEnv",
       "request": "launch",
       "type": "debugpy",
       "program": "./.vscode/tasks.py",
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",  
     }
   ]
-}
+}   
