sisu ETL updated

--- a/dags/lib_mec_sisu/env.yaml
+++ b/dags/lib_mec_sisu/env.yaml
@@ -1,6 +1,38 @@
 # Project variables
-data_url: "change-me"
-database: "change-me"
-registry: "change-me"
-files_dir: "change-me"
-table: "change-me"
+domain: "https://dadosabertos.mec.gov.br/"
+data_url: "https://dadosabertos.mec.gov.br/sisu?start="
+database: "dw_mec"
+registry: "rg_mec"
+files_dir: "mec/sisu"
+data_dir: "data"
+table: "sisu"
+extension: ".csv.gz"
+cota_map: {
+    'Ampla Concorrência': 'Ampla',
+    'Candidatos autodeclarados pretos, pardos ou indígenas, com renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos autodeclarados pretos, pardos ou indígenas que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos com deficiência autodeclarados pretos, pardos ou indígenas, que tenham renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012)': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos com deficiência autodeclarados pretos, pardos ou indígenas que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos autodeclarados indígenas, com renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e  que tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Indígena',
+    'Candidatos autodeclarados indígenas que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Indígena',
+    'Candidatos autodeclarados pretos ou pardos, com renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo que tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto',
+    'Candidatos autodeclarados pretos ou pardos que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto',
+    'Candidatos com deficiência autodeclarados pretos ou pardos que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto',
+    'Candidatos com deficiência autodeclarados pretos ou pardos, que tenham renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em escolas públicas (Lei nº 12.711/2012).': 'Preto,Pardos, Indígenas e Quilombolas',
+    'A2 - Candidatos negros ou indígenas com comprovação de carência socioeconômica': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos A2 - Carente Socioeconômico e Negros/Indígenas ou alunos oriundos de Comunidades Quilombolas': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos Negros ou Indígenas com comprovação de carência socioeconômica': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidato (s) negros, entendidos como candidatos que possuem fenótipo que os caracterizem, na sociedade, como pertencentes ao grupo racial negro': 'Preto',
+    'autodeclarados Negros (Denominada A2)': 'Preto',
+    'indígenas que tenham cursado todo o 2º ciclo do ensino fundamental (5ª a 8ª séries) e todo o ensino médio, única e exclusivamente, em escola pública, que tenham renda bruta familiar mensal igual ou inferior a 04 salários mínimos e que tenham vinculação étnica comprovada por organização indígena devidamente reconhecida.': 'Indígena',
+    'Quilombolas que tenham cursado todo o 2º Ciclo do Ensino Fundamental e o Ensino Médio exclusivamente em escola pública, que tenham renda bruta familiar mensal inferior ou igual a 04 (quatro) vezes o valor do salário mínimo nacional vigente no ato da matrícula e que não possuam título de graduação.': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidatos autodeclarados negros e que não tenham concluído curso de graduação': 'Preto',
+    'Candidatos indígenas e que não tenham concluído curso de graduação': 'Indígena',
+    'Candidatos quilombolas e que não tenham concluído curso de graduação': 'Preto,Pardos, Indígenas e Quilombolas',
+    'V5822 - Candidatos membros de comunidade quilombola': 'Preto,Pardos, Indígenas e Quilombolas',
+    'V5823 - Candidatos membros de grupos indígenas': 'Indígena',
+    'IEEP - Indígena, de baixa renda, egresso de escola pública:': 'Indígena',
+    'Ação Afirmativa 1: Para pessoas negras, quilombolas e indígenas que tenham cursado integralmente o Ensino Médio em escolas da rede pública de ensino, com renda per capita de até um salário-mínimo e meio (1,5);': 'Preto,Pardos, Indígenas e Quilombolas',
+    'Candidato (s) autodeclarados negros (somatório das categorias pretos e pardos, segundo classificação étnico-racial adotada pelo IBGE) que tenham cursado o ensino fundamental 2 (do 6º ao 9º ano) e ensino medio completo (incluindo os cursos técnicos com duração de 4 anos) ou ter realizado curso supletivo ou outra modalidade de ensino equivalente, em estabelecimento da Rede Pública de Ensino do Brasil. Vedado aos portadores de diploma de nível superior': 'Preto',
+    'indígenas, condição que deve ser comprovada mediante apresentação do RANI (Registro Administrativo de Nascimento de Indígena) ou declaração emitida por entidade de representação indígena. (A2)': 'Indígena'
+}
