--- a/dags/lib_mec_sisu/env.yaml
+++ b/dags/lib_mec_sisu/env.yaml
@@ -1,7 +1,7 @@
 # Project variables
 domain: "https://dadosabertos.mec.gov.br/"
 data_url: "https://dadosabertos.mec.gov.br/sisu?start="
-database: "dw_mec"
+database: "DLDP"
 registry: "rg_mec"
 files_dir: "mec/sisu"
 data_dir: "data"
