--- a/dags/lib_mec_sisu/env.yaml
+++ b/dags/lib_mec_sisu/env.yaml
@@ -7,3 +7,4 @@ files_dir: "mec/sisu"
 data_dir: "data"
 table: "sisu"
 extension: ".csv.gz"
+target_columns: ['ANO', 'CPF', 'INSCRITO', 'CURSO', 'SIGLA_IES', 'UF_IES', 'MATRICULA','NOTA_L', 'NOTA_CH', 'NOTA_CN', 'NOTA_M', 'NOTA_R']
